# fastapi-file-server

./: Makefile  docker-compose.yml  main.py  pyproject.toml
templates/: index.html  upload.html
